name: adventofcode2016
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocsplit
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  ghc-options:     -Wall
  build-depends:   base

executable 09_decompression
  build-depends:  base, adventofcode2016, aocsplit
  hs-source-dirs: bin
  main-is:        09_decompression.hs
  ghc-options:    -Wall

executable 19_josephus
  -- Seq.deleteAt added in 0.5.8.1
  build-depends:  base, array, containers >= 0.5.8.1
  hs-source-dirs: bin
  main-is:        19_josephus.hs
  ghc-options:    -Wall

executable 20_firewall_rules
  build-depends:  base, adventofcode2016, aocsplit
  hs-source-dirs: bin
  main-is:        20_firewall_rules.hs
  ghc-options:    -Wall
