cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2016
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_manhattan_distance
  import: bin, flags
  build-depends: base, adventofcode2016, containers
  main-is:       01_manhattan_distance.hs

executable 02_elevator_keypad
  import: bin, flags
  build-depends: base, adventofcode2016
  main-is:       02_elevator_keypad.hs

executable 03_triangles
  import: bin, flags
  build-depends: base, adventofcode2016
  main-is:       03_triangles.hs

executable 04_encrypted_rooms
  import: bin, flags
  build-depends: base, adventofcode2016, array
  main-is:       04_encrypted_rooms.hs

executable 05_md5_door
  import: bin, flags
  build-depends: base, bytestring, cryptohash-md5, containers, directory
  main-is:       05_md5_door.hs

executable 06_frequent_characters
  import: bin, flags
  build-depends: base, adventofcode2016, array
  main-is:       06_frequent_characters.hs

executable 07_ipv7
  import: bin, flags
  build-depends: base, adventofcode2016, aocsplit
  main-is:       07_ipv7.hs

executable 08_2fa
  import: bin, flags
  build-depends: base, adventofcode2016, aocsplit, containers
  main-is:       08_2fa.hs

executable 09_decompression
  import: bin, flags
  build-depends: base, adventofcode2016, aocsplit
  main-is:       09_decompression.hs

executable 10_balance_bots
  import: bin, flags
  build-depends: base, adventofcode2016, containers
  main-is:       10_balance_bots.hs
